--- a/index.html
+++ b/index.html
@@ -1,67 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Live Contact Form</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    form {
-      background: white;
-      padding: 20px;
-      width: 300px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    input, textarea, button {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 8px;
-    }
-    button {
-      background: #2563eb;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-  </style>
 </head>
 <body>
 
-  <form id="contactForm">
-    <h3>Contact Us</h3>
-    <input name="name" placeholder="Your Name" required>
-    <input name="email" type="email" placeholder="Your Email" required>
-    <textarea name="message" placeholder="Message"></textarea>
+  <form
+    action="https://script.google.com/macros/s/AKfycbyFZRVkutuP_vMUUAM7QE1XEX0AbvPACjyVcbPsO_qqX_X6Y7HDHDW8CEhuptgphr5ofA/exec"
+    method="POST"
+  >
+    <input name="name" placeholder="Name" required><br><br>
+    <input name="email" type="email" placeholder="Email" required><br><br>
+    <textarea name="message" placeholder="Message"></textarea><br><br>
     <button type="submit">Submit</button>
-    <p id="status"></p>
   </form>
-
-  <script>
-    const form = document.getElementById("contactForm");
-    const status = document.getElementById("status");
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const response = await fetch(
-        "https://script.google.com/macros/s/AKfycbyFZRVkutuP_vMUUAM7QE1XEX0AbvPACjyVcbPsO_qqX_X6Y7HDHDW8CEhuptgphr5ofA/exec",
-        {
-          method: "POST",
-          body: new FormData(form)
-        }
-      );
-
-      status.innerText = "✅ Submitted successfully!";
-      form.reset();
-    });
-  </script>
 
 </body>
 </html>
